--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
 
 html {
   block-size: 100%;
-  background-color: black;
+  background-color: #1b1919;
 }
 
 .page {
@@ -37,18 +37,15 @@ ul,
 ol {
   list-style: none;
 }
-button:focus {
-  outline: 0;
-}
+
 .content {
   position: relative;
   display: inline-flex;
   align-items: flex-end;
   margin: auto;
   width: 1140px;
-  height: 534px;
-  top: 133px;
-  left: 30px;
+  margin-top: 133px;
+  margin-left: 30px;
   gap: 30px;
 }
 
@@ -75,15 +72,6 @@ button:focus {
   justify-content: space-between;
   align-items: flex-end;
   width: 711px;
-  height: 54px;
-}
-
-.search-form__textfield {
-  cursor: pointer;
-  outline: 0;
-  border-top: 1px solid rgba(255, 255, 255, 0.7);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.7);
-  border-right: none;
 }
 
 .search-form__fieldset {
@@ -103,30 +91,10 @@ button:focus {
   line-height: 22px;
   letter-spacing: 0px;
   text-align: left;
-  color: rgba(255, 255, 255, 1);
+  color: rgba(255 255 255 / 1);
   white-space: nowrap;
   margin-bottom: -3px;
   margin-right: 118px;
-}
-
-.search-form__checkbox {
-  cursor: pointer;
-}
-
-input[type="checkbox"].search-form__checkbox {
-  display: none;
-}
-
-.search-form__checkbox-list {
-  display: flex;
-  justify-content: space-between;
-}
-
-input[type="checkbox"] {
-  width: 20px;
-  height: 20px;
-  margin: 0px;
-  accent-color: #000;
 }
 
 .search-form__label {
@@ -135,19 +103,19 @@ input[type="checkbox"] {
   margin-bottom: 4px;
 }
 
-.search-form__label:hover {
-  text-decoration: underline;
-}
-
-.search-form__label:focus {
-  outline: 0;
-  outline-offset: 0;
-  border: none;
+.search-form__label:has(:focus) {
+  outline: solid 2px rgb(255 255 255 / 1);
+  outline-offset: 1px;
 }
 
 .search-form__label:has(:focus-visible) {
-  outline: 1px solid #0e0d0d;
+  outline: solid 2px rgb(255 255 255 / 1);
   outline-offset: 1px;
+}
+
+.search-form__label:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
 
 .visually-hidden {
@@ -160,43 +128,8 @@ input[type="checkbox"] {
   white-space: nowrap;
 }
 
-.search-form__pseudo-checkbox::before {
-  content: "\00A0";
-  display: inline-block;
-  box-sizing: border-box;
-  width: 20px;
-  height: 20px;
-  background-color: none;
-  border: 2px solid #b0b0b0;
-}
-
-input[type="checkbox"]:checked + .search-form__pseudo-checkbox::before {
-  background-color: #fff;
-  content: "\00A0";
-  width: 20px;
-  height: 20px;
-}
-
-.search-form__pseudo-checkbox2::before {
-  content: "\00A0";
-  display: inline-block;
-  box-sizing: border-box;
-  width: 20px;
-  height: 20px;
-  background-color: none;
-  border: 2px solid #b0b0b0;
-}
-
-input[type="checkbox"]:checked + .search-form__pseudo-checkbox2::before {
-  background-color: #fff;
-  content: "\00A0";
-  width: 16px;
-  height: 16px;
-}
-
 .search-form__textfield {
   width: 225px;
-  height: 27px;
   font-family: "Fira Sans Condensed", Arial, Helvetica, sans-serif;
   font-size: 18px;
   font-weight: 400;
@@ -205,11 +138,61 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox2::before {
   text-align: left;
   background: transparent;
   appearance: none;
+  cursor: pointer;
+  outline: 0;
+  border-top: 1px solid rgb(255 255 255 / 0.7);
+  border-bottom: 1px solid rgb(255 255 255 / 0.7);
+  border-right: none;
+  border-left: none;
+  color: rgb(255 255 255 / 0.7);
 }
 
-.search-form__textfield:focus {
-  outline: 0;
-  outline-offset: 0;
+.search-form__textfield:active {
+  border-right: 1px solid rgb(255 255 255 / 0.7);
+  border-left: 1px solid rgb(255 255 255 / 0.7);
+}
+
+.search-form__textfield:hover {
+  text-decoration: none;
+}
+
+::placeholder {
+  color: rgb(255 255 255 / 0.7);
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.search-form__checkbox {
+  display: grid;
+  margin-top: -15px;
+}
+
+.search-form__pseudo-checkbox {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  outline: 1px solid rgb(255 255 255 / 1);
+  position: relative;
+}
+
+.search-form__pseudo-checkbox::before {
+  content: " ";
+    position: absolute;
+    display: block;
+    width: 17px;
+    height: 17px;
+    background-color: rgb(255 255 255 / 1);
+    transform: translate(-50%, -50%);
+    margin-top: 9px;
+    margin-left: 10px;
+    opacity: 0;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
+  opacity: 1;
 }
 
 .button {
@@ -220,45 +203,57 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox2::before {
   line-height: 22px;
   letter-spacing: 1px;
   text-align: center;
-  color: #fff;
-}
-
-.button:hover {
-  outline: none;
+  color: rgb(255 255 255 / 1);
 }
 
 .search-form__submit-button {
   width: 192px;
   height: 34px;
   background: transparent;
-  border: 1px solid rgba(255, 255, 255, 1);
+  border: 1px solid rgb(255 255 255 / 1);
 }
 
 .search-form__submit-button:active {
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgb(255 255 255 / 0.3);
+}
+
+.search-form__submit-button:hover {
+  text-decoration: underline;
 }
 
 .search-form__submit-button:focus {
-  outline: 0;
+  outline: 1px solid rgb(255 255 255 / 1);
+  outline-offset: 0px;
 }
 
 .search-form__submit-button:focus-visible {
-  outline: solid 2px rgba(255, 255, 255, 1);
+  outline: solid 2px rgb(255 255 255 / 1);
+  outline-offset: 0px;
 }
 
 .more-button {
-  width: 373px;
+  width: 100%;
   height: 35px;
   background: transparent;
-  border: 1px solid rgba(255, 255, 255, 1);
+  border: 1px solid rgb(255 255 255 / 1);
+}
+
+.more-button:active {
+  background-color: rgb(255 255 255 / 0.3);
+}
+
+.more-button:hover {
+  text-decoration: underline;
 }
 
 .more-button:focus {
-  outline: 0;
+  outline: 1px solid rgb(255 255 255 / 1);
+  outline-offset: 0px;
 }
 
 .more-button:focus-visible {
-  outline: solid 2px rgba(255, 255, 255, 1);
+  outline: solid 2px rgb(255 255 255 / 1);
+  outline-offset: 0px;
 }
 
 .content__details {
@@ -271,7 +266,6 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox2::before {
 
 .title {
   width: 260px;
-  height: 210px;
   font-family: Oswald, Arial, Helvetica, sans-serif;
   font-size: 75px;
   font-weight: 700;
@@ -282,7 +276,7 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox2::before {
 }
 
 .content__accent {
-  color: rgba(84, 80, 80, 1);
+  color: rgb(84 80 80 / 1);
 }
 
 .content__list {
@@ -298,23 +292,29 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox2::before {
 
 .content__card-link {
   text-decoration: none;
-  color: #fff;
+  color: rgb(255 255 255 / 1);
   margin: 2px;
   display: block;
 }
 
 .content__card-link:focus {
-  outline: 0;
-  border: 0;
+  outline: 1px solid rgb(255 255 255 / 1);
+  outline-offset: 0px;
+}
+
+.content__card-link:focus-visible {
+  outline: 2px solid rgb(255 255 255 / 1);
+  outline-offset: 0px;
 }
 
 .content__card-link_current:focus {
-  border: none;
-  outline: 0;
+  outline: 1px solid rgb(255 255 255 / 1);
+  outline-offset: 0px;
 }
 
 .content__card-link_current:focus-visible {
-  border: 1px solid rgba(255, 255, 255, 1);
+  outline: solid 2px rgb(255 255 255 / 1);
+  outline-offset: 0px;
 }
 
 .content__video-card {
@@ -325,17 +325,7 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox2::before {
 }
 
 .content__video-card:active {
-  background-color: rgba(255, 255, 255, 0.3);
-}
-
-.content__video-card:focus-visible {
-  border: 1px solid #ffffff;
-}
-
-.content__video-card-thumbnail {
-  width: 175px;
-  height: 101px;
-  object-fit: cover;
+  background-color: rgb(255 255 255 / 0.3);
 }
 
 .content__video-card-description-container {
@@ -353,6 +343,10 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox2::before {
   text-transform: uppercase;
 }
 
+.content__video-card-title:hover {
+  text-decoration: underline;
+}
+
 .content__video-card-description {
   font-family: "Fira Sans Condensed", Arial, Helvetica, sans-serif;
   font-size: 18px;
@@ -360,4 +354,13 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox2::before {
   line-height: 16px;
   letter-spacing: 0em;
   text-align: left;
+}
+
+.content__video-card-description:hover {
+  text-decoration: underline;
+}
+
+.content__video-card-thumbnail {
+  height: 101px;
+  object-fit: cover;
 }
